Crash adding a Driver and then changing frame. #57359

Closed
opened 2018-10-23 15:41:54 +02:00 by Alessio Monti di Sopra · 6 comments

System Information
Windows 8.1 64 bit
CPU: Intel i7 4700MQ
GPU: Nvidia GeForce GT 740M

Blender Version
f22385f28e

"Short" description of errorBlender crashes changing frame after adding a Driver to an object property with the default values, if one previously had added a keyframe to another object property of the same object.Exact steps for others to reproduce the error
With default cube:

  • add a keyframe to any object property (location X for example)
  • add a driver to another property (location Y for example) leaving everything as is
  • change current frame
**System Information** Windows 8.1 64 bit CPU: Intel i7 4700MQ GPU: Nvidia GeForce GT 740M **Blender Version** f22385f28ec **"Short" description of error**Blender crashes changing frame after adding a Driver to an object property with the default values, if one previously had added a keyframe to another object property of the same object.**Exact steps for others to reproduce the error** With default cube: * add a keyframe to any object property (location X for example) * add a driver to another property (location Y for example) leaving everything as is * change current frame

Added subscriber: @a.monti

Added subscriber: @a.monti

Added subscribers: @Sergey, @brecht

Added subscribers: @Sergey, @brecht

@Sergey, I guess this is related to your recent changes.

@Sergey, I guess this is related to your recent changes.
Sergey Sharybin self-assigned this 2018-10-23 18:08:41 +02:00

Kind of related, but is not caused or anything by those changes. From quick look seems it is a missing tag of object for CoW update, which probably leaves copy of object and dependency graph out of sync.

Need to have a closer look though.

Kind of related, but is not caused or anything by those changes. From quick look seems it is a missing tag of object for CoW update, which probably leaves copy of object and dependency graph out of sync. Need to have a closer look though.

This issue was referenced by ee18b21201

This issue was referenced by ee18b21201479e87ac8683196bb2f868e63b216b

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#57359
No description provided.