Fix T57359: Crash adding a Driver and then changing frame